@@ -1,4 +1,5 @@
 - Fix query on paper_trail action
+- Fix one? on tableless relation
 
 = 3.6.15
 - Prevent firing 2 change events on jquery datetime pickers
